--- a/frontend/app/public/index.html
+++ b/frontend/app/public/index.html
@@ -26,7 +26,7 @@
   <title>トラベルノーツ</title>
 </head>
 
-<body>
+<body style="background-color: #fafafa">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
